Fix button on firefox.

--- a/assets/css/security/registration.scss
+++ b/assets/css/security/registration.scss
@@ -1,9 +1,7 @@
-input[type='text'],
-input[type='email'],
-input[type='phone'],
-input[type='password'],
+input,
 textarea {
   border-radius: 0;
+  border: 1px solid silver;
 }
 
 .regSecLabel {
